<?xml version="1.0" encoding="utf-8"?>

<!--    NAMA  : SYAYFUL HIDAYAT-->
<!--    NIM   : 10120912-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="@dimen/dimen_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            android:text="PROFIL DATA DIRI"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/foto_profil"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/profil"
            android:layout_marginTop="@dimen/dimen_12dp"
            app:layout_constraintTop_toBottomOf="@+id/bio"/>

        <TextView
            android:id="@+id/nama"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:text="Nama"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto_profil"
            android:layout_marginLeft="@dimen/dimen_8dp"/>

        <TextView
            android:id="@+id/nama2"
            android:layout_width="233dp"
            android:layout_height="27dp"
            android:textAlignment="gravity"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:layout_toEndOf="@+id/nama"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/app_name"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toEndOf="@id/nama"
            app:layout_constraintTop_toBottomOf="@+id/foto_profil"
            android:layout_marginLeft="@dimen/dimen_8dp"/>

        <TextView
            android:id="@+id/tgl_lahir"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Tempat, Tanggal Lahir"
            android:textSize="14dp"
            android:layout_marginStart="10dp"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama"
            android:layout_marginLeft="@dimen/dimen_8dp" />

        <TextView
            android:id="@+id/tgl_lahir2"
            android:layout_width="233dp"
            android:layout_height="28dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/nama"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tanggal_lahir"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@id/tgl_lahir"
            app:layout_constraintTop_toBottomOf="@+id/nama2"
            android:layout_marginLeft="@dimen/dimen_8dp"/>

        <TextView
            android:id="@+id/alamat"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Alamat"
            android:textSize="14dp"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tgl_lahir" />

        <TextView
            android:id="@+id/alamat2"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/desc"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tgl_lahir2"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/alamat"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@id/tgl_lahir"
            app:layout_constraintTop_toBottomOf="@+id/tgl_lahir2" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alamat2"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="DESKRIPSI"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="17dp"
            android:textColor="@color/ungu"/>

        <TextView
            android:id="@+id/desc2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/desc_profil"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/hobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc2"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="HOBI"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="17dp"
            android:textColor="@color/ungu"/>

        <TextView
            android:id="@+id/hobi2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hobi"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:text="@string/hobi"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hobi2"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="INTEREST"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="17dp"
            android:textColor="@color/ungu"/>

        <TextView
            android:id="@+id/inter2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inter"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:text="@string/interest"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/cita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inter2"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="CITA - CITA"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="17dp"
            android:textColor="@color/ungu"/>

        <TextView
            android:id="@+id/cita2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cita"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:text="@string/cita"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/pendidikan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="PENDIDIKAN"
            android:textSize="17dp"
            android:textColor="@color/ungu"
            android:layout_marginTop="@dimen/dimen_12dp"
            app:layout_constraintTop_toBottomOf="@id/cita2"/>

        <TextView
            android:id="@+id/pd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pd1"
            android:textSize="14dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pendidikan" />

        <TextView
            android:id="@+id/pd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pd2"
            android:textSize="14dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pd1" />

        <TextView
            android:id="@+id/pd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pd3"
            android:textSize="14dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pd2" />

        <TextView
            android:id="@+id/pd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pd3"
            android:text="@string/pd4"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pd4"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="PENGALAMAN"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="17dp"
            android:textColor="@color/ungu"/>

        <TextView
            android:id="@+id/wr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/work1"
            android:textSize="14dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/work" />

        <TextView
            android:id="@+id/wr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/work2"
            android:textSize="14dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wr1" />

        <TextView
            android:id="@+id/wr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/work3"
            android:textSize="14dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wr2" />

        <TextView
            android:id="@+id/wr4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wr3"
            android:text="@string/work4"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/wr5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wr5"
            android:text="@string/work5"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>